--- a/task N_13/index.html
+++ b/task N_13/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js" defer></script>
+    <script src="./script.js"></script>
+    <!-- <link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script> -->
     <title>DRINKS_HASH_FUNC</title>
 </head>
-<body id="html" title="Hello">
-    World
+<body id="html" class="body">
+    
 </body>
 </html>  
