--- a/task N_13/index.html
+++ b/task N_13/index.html
@@ -4,12 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js"></script>
-    <!-- <link rel="stylesheet/less" type="text/css" href="styles.less" />
-    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script> -->
+    <script src="./script.js" defer></script>
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <script src="https://cdn.jsdelivr.net/npm/less@4.1.1" ></script>
     <title>DRINKS_HASH_FUNC</title>
 </head>
-<body id="html" class="body">
-    
+<body id="html">
+    <h1>Любимые напитки</h1>
+    <form class="form" onsubmit="return checkForm(this)">
+        <input id="giveDrink" class="form__start" type="button" value="Добавить напиток">
+        <div id="formStart" class="form__interes">
+            <label for="nameDrinkHtml">Введите название напитка</label>
+            <input type="text" name="nameDrinkHtml" autocomplete="off" id="nameDrinkHtml">
+            <label for="type">Введите тип напитка</label>
+            <input type="text" name="type" autocomplete="off" id="typeDrink">
+            <div>
+                <label for="alcoholic">Является ли ваш напиток алкагольным?</label>
+                <div class="alcoholicTrue">
+                    <label for="">Да:</label>
+                    <input type="radio" name="alcoholic" id="alcoholicTrue" value="Алкогольный напиток">
+                </div>
+                <div>
+                    <label for="">Нет:</label>
+                    <input type="radio" name="alcoholic" id="alcoholicFalse" value="Безалкогольный напиток">
+                </div>
+            </div>
+            <textarea autocomplete="off" name="info" id="info" rows="10"></textarea>
+            <input id="saveInfo" class="button__form"
+                type="submit"
+                value="Сохранить информацию о напитке"
+                size="50px">
+        </div> 
+        <div class="form_check">
+            <input id="checkDrink" class="form__check" type="button" value="Получение информации о напитке"> 
+            <input type="text" name="checkNameDrink" id="checkNameDrink" autocomplete="off" placeholder="Введите название напитка">
+        </div>
+        <div id="infoAboutDrinks" class="infoAboutDrinks">
+            <div id="infoAboutDrinks__info" class="form__infoAboutDrinks"></div> 
+            <input id="infoAboutDrinks__clos" class="form__infoAboutDrinks_clos" type="button" value="Ok">
+        </div>
+        <div class="form_check">
+            <input id="deleteDrink" class="form__check" type="button" value="Удалить напиток"> 
+            <input type="text" name="checkNameDrink" id="checkNameDrinkDelete" autocomplete="off" placeholder="Введите название напитка">
+        </div>
+        <div id="infoAboutDrinksDelete" class="infoAboutDrinks_delete">
+            <div id="infoAboutDrinks_delete__info" class="form__infoAboutDrinks_delete"></div>
+            <input id="infoAboutDrinks_delete__clos" class="form__infoAboutDrinks_clos" type="button" value="Ok">
+        </div>
+        <div id="show" class="show">
+            <input id="show__all" class="show__all" type="button" value="Все наши напитки"> 
+        </div>
+        <div id="show__drinks" class="show__drinks">
+            <div id="infoAboutDrinks_delete__info" class="form__infoAboutDrinks_delete"></div>
+            <input id="infoAboutDrinks_delete__clos" class="form__infoAboutDrinks_clos" type="button" value="Ok">
+        </div>
+    </form>
 </body>
 </html>  
