--- a/task N_23/index.html
+++ b/task N_23/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="https://fe.it-academy.by/TestForm.php">
+
+    </form>    
 </body>
 </html>
