I have make it but not all

--- a/task N_30/index.html
+++ b/task N_30/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div >
-        <img class="imgA" draggable="true" id="imgA" src="./img/biohazard.png" alt="img" style="position: absolute; top: 20px; left: 10px;">
-        <img class="imgB" src="./img/Man-and-woman.png" alt="img" style="position: absolute; top: 20px; left: 250px;">
-        <img class="imgC" src="./img/Yin_and_Yang.png" alt="img" style="position: absolute; top: 20px; left: 490px;">
-        <img class="imgD" src="./img/No_smoking.png" alt="img" style="position: absolute; top: 20px; left: 740px;">
+        <img class="imgA"  id="imgA" src="./img/biohazard.png" alt="img" style="position: absolute; top: 20px; left: 10px;">
+        <img class="imgB"  id="imgB" src="./img/Man-and-woman.png" alt="img" style="position: absolute; top: 20px; left: 250px;">
+        <img class="imgC"  id="imgC" src="./img/Yin_and_Yang.png" alt="img" style="position: absolute; top: 20px; left: 490px;">
+        <img class="imgD"  id="imgD" src="./img/No_smoking.png" alt="img" style="position: absolute; top: 20px; left: 740px;">
     </div>
 </body>
 </html>
